# ilatex

./: .cspell.json  .cz.yaml  .envrc  .gitignore  .gitmodules  .latexindent.yaml  .mega-linter.yaml  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  cspell.config.yaml  iarticle.cls  icode.sty  imath.sty  index.html  install.ps1  install.sh  ipkg.sty  iwork.cls  mkdocs.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/: .mega-linter.yaml  auto-label.yaml  blunderbuss.yml  dependabot.yaml  renovate.json  sync-repo-settings.yaml
.github/actions/deploy/: action.yaml
.github/actions/docs/: action.yaml
.github/actions/publish/: action.yaml
.github/copier/: .copier-answers.share.yaml
.github/megalinter/: .checkov.yml  .devskim.json  kics.config
.github/workflows/: bump-version.yml  check.yaml  ci.yaml  commitizen.yaml  docs.yaml  gh-pages.yaml  license.yaml  mega-linter.yaml  megalinter.yaml  merge.yaml  pre-commit.yaml  stale.yaml  template.yaml  update-license-year.yaml
config/: packages.yaml  pkgs.yaml
data/: pkg.txt
demo/article/chinese/: chinese.tex
demo/article/default/: article.tex  default.tex
demo/article/default/package/: amsmath.tex  amssymb.tex  amsthm.tex  array.tex  babel.tex  blindtext.tex  booktabs.tex  caption.tex  cleveref.tex  enumitem.tex  esint.tex  etoolbox.tex  fancyhdr.tex  mwe.tex  (+22 more)
demo/article/manual/: manual.tex
demo/article/two-column/: two-column.tex
demo/article/twocolumn/: article-twocolumn.tex
demo/article/zh/: article-zh.tex
demo/beamer/default/: default.tex
demo/work/chinese/: chinese.tex
demo/work/default/: default.tex  work.tex
docs/: Gemfile  _config.yml  index.md  requirements.txt
example/iarticle-example/: iarticle-example.tex
example/iwork-example/: iwork-example.tex
script/: Makefile  package-to-subsection.py
scripts/: demo.sh  docs.sh  install.sh  pkg-to-subsection.py  pre-deploy.sh  requirements.txt  template.sh
search/: search_index.json
src/: defs.tex  iarticle.cls  ibeamer.cls  icode.sty  imath.sty  iwork.cls
src/common/: ctex.tex  enumitem.tex  fancyhdr.tex  fontspec.tex  geometry.tex  hyperref.tex  noto.tex  silence.tex  siunitx.tex  tabularx.tex  tcolorbox.tex  titlesec.tex  xcolor.tex
src/share/: ctex.tex  enumitem.tex  fancyhdr.tex  float.tex  fontspec.tex  geometry.tex  tcolorbox.tex
(+38 files in other folders)
