[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.3"
tag_format = "$version"
version_files = ["pyproject.toml:version"]

[tool.poetry]
name = "ilatex"
version = "0.3.3"
description = "Simple LaTeX Templates"
authors = ["Qin Li <liblaf@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://liblaf.github.io/ilatex/"
repository = "https://github.com/liblaf/ilatex"
documentation = "https://liblaf.github.io/ilatex/"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
lxml = "^4.9.1"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^8.5.7"
