[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.3.3"
version_files = ["pyproject.toml:version"]

[tool.poetry]
authors = ["Qin Li <liblaf@outlook.com>"]
description = "Simple LaTeX Templates"
documentation = "https://liblaf.github.io/ilatex/"
homepage = "https://liblaf.github.io/ilatex/"
license = "MIT"
name = "ilatex"
readme = "README.md"
repository = "https://github.com/liblaf/ilatex"
version = "0.3.3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
lxml = "^4.9.1"
mkdocs-git-authors-plugin = "^0.6.4"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-material = "^8.5.7"
